update all example notebooks (#882)

--- a/examples/parse/demo_api.ipynb
+++ b/examples/parse/demo_api.ipynb
@@ -6,32 +6,19 @@
    "source": [
     "# Using the Raw API\n",
     "\n",
-    "This notebook walks through how to use the raw API and how"
+    "This notebook walks through how to use the raw API to parse documents.\n",
+    "\n",
+    "Status:\n",
+    "| Last Executed | Version | State      |\n",
+    "|---------------|---------|------------|\n",
+    "| Aug-18-2025   | N/A     | Maintained |"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-02-02 11:11:39--  https://arxiv.org/pdf/1706.03762.pdf\n",
-      "Resolving arxiv.org (arxiv.org)... 151.101.131.42, 151.101.3.42, 151.101.67.42, ...\n",
-      "Connecting to arxiv.org (arxiv.org)|151.101.131.42|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 2215244 (2.1M) [application/pdf]\n",
-      "Saving to: ‘./attention.pdf’\n",
-      "\n",
-      "./attention.pdf     100%[===================>]   2.11M  --.-KB/s    in 0.08s   \n",
-      "\n",
-      "2024-02-02 11:11:39 (27.3 MB/s) - ‘./attention.pdf’ saved [2215244/2215244]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget \"https://arxiv.org/pdf/1706.03762.pdf\" -O \"./attention.pdf\""
    ]
@@ -62,15 +49,23 @@
     "with open(file_path, \"rb\") as f:\n",
     "    mime_type = mimetypes.guess_type(file_path)[0]\n",
     "    files = {\"file\": (f.name, f, mime_type)}\n",
+    "    body = {\n",
+    "        \"parse_mode\": \"parse_page_with_agent\",\n",
+    "        \"model\": \"openai-gpt-4-1-mini\",\n",
+    "        \"high_res_ocr\": True,\n",
+    "        \"adaptive_long_table\": True,\n",
+    "        \"outlined_table_extraction\": True,\n",
+    "        \"output_tables_as_HTML\": True,\n",
+    "    }\n",
     "\n",
     "    # send the request, upload the file\n",
     "    url = f\"{base_url}/upload\"\n",
-    "    response = requests.post(url, headers=headers, files=files)\n",
+    "    response = requests.post(url, headers=headers, files=files, data=body)\n",
     "\n",
     "response.raise_for_status()\n",
     "# get the job id for the result_url\n",
     "job_id = response.json()[\"id\"]\n",
-    "result_type = \"text\"  # or \"markdown\"\n",
+    "result_type = \"json\"  # or \"markdown\" or \"json\"\n",
     "result_url = f\"{base_url}/job/{job_id}/result/{result_type}\"\n",
     "\n",
     "# check for the result until its ready\n",
@@ -82,8 +77,7 @@
     "    time.sleep(2)\n",
     "\n",
     "# download the result\n",
-    "result = response.json()\n",
-    "output = result[result_type]"
+    "result = response.json()"
    ]
   },
   {
@@ -95,27 +89,94 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                          Provided proper attribution is provided, Google hereby grants permission to\n",
-      "                          reproduce the tables and figures in this paper solely for use in journalistic or\n",
-      "                                                                   scholarly works.\n",
-      "                                                   Attention Is All You Need\n",
-      "arXiv:1706.03762v7  [cs.CL]  2 Aug 2023\n",
-      "                            Ashish Vaswani∗                Noam Shazeer∗               Niki Parmar∗             Jakob Uszkoreit∗\n",
-      "                              Google Brain                  Google Brain             Google Research            Google Research\n",
-      "                        avaswani@google.com             noam@google.com            nikip@google.com            usz@google.com\n",
-      "                                Llion Jones∗                 Aidan N. Gomez∗        †                  Łukasz Kaiser∗\n",
-      "                             Google Research                University of Toronto        \n"
+      "dict_keys(['pages', 'job_metadata'])\n"
      ]
     }
    ],
    "source": [
-    "print(output[:1000])"
+    "print(result.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['page', 'text', 'md', 'images', 'charts', 'items', 'status', 'originalOrientationAngle', 'links', 'width', 'height', 'triggeredAutoMode', 'parsingMode', 'structuredData', 'noStructuredContent', 'noTextContent', 'pageHeaderMarkdown', 'pageFooterMarkdown', 'confidence'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result[\"pages\"][0].keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Provided proper attribution is provided, Google hereby grants permission to reproduce the tables and figures in this paper solely for use in journalistic or scholarly works.\n",
+      "\n",
+      "# Attention Is All You Need\n",
+      "\n",
+      "**Ashish Vaswani***  \n",
+      "Google Brain  \n",
+      "avaswani@google.com  \n",
+      "\n",
+      "**Noam Shazeer***  \n",
+      "Google Brain  \n",
+      "noam@google.com  \n",
+      "\n",
+      "**Niki Parmar***  \n",
+      "Google Research  \n",
+      "nikip@google.com  \n",
+      "\n",
+      "**Jakob Uszkoreit***  \n",
+      "Google Research  \n",
+      "usz@google.com  \n",
+      "\n",
+      "**Llion Jones***  \n",
+      "Google Research  \n",
+      "llion@google.com  \n",
+      "\n",
+      "**Aidan N. Gomez* †**  \n",
+      "University of Toronto  \n",
+      "aidan@cs.toronto.edu  \n",
+      "\n",
+      "**Łukasz Kaiser***  \n",
+      "Google Brain  \n",
+      "lukaszkaiser@google.com  \n",
+      "\n",
+      "**Illia Polosukhin* ‡**  \n",
+      "illia.polosukhin@gmail.com  \n",
+      "\n",
+      "## Abstract\n",
+      "\n",
+      "The dominant sequence transduction models are based on complex recurrent or convolutional neural networks that include an encoder and a decoder. The best performing models also connect the encoder and decoder through an attention mechanism. We propose a new simple network architecture, the Transformer, based solely on attention mechanisms, dispensing with recurrence and convolutions entirely. Experiments on two machine translation tasks show these models to be superior in quality while being more parallelizable and requiring significantly less time to train. Our model achieves 28.4 BLEU on the WMT 2014 English-to-German translation task, improving over the existing best results, including ensembles, by over 2 BLEU. On the WMT 2014 English-to-French translation task, our model establishes a new single-model state-of-the-art BLEU score of 41.8 after training for 3.5 days on eight GPUs, a small fraction of the training costs of the best models from the literature. We show that the Transformer generalizes well to other tasks by applying it successfully to English constituency parsing both with large and limited training data.\n",
+      "\n",
+      "----\n",
+      "\n",
+      "*Equal contribution. Listing order is random. Jakob proposed replacing RNNs with self-attention and started the effort to evaluate this idea. Ashish, with Il\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result[\"pages\"][0][\"md\"][:2000])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llama-parse-aNC435Vv-py3.11",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
