--- a/examples/parse/demo_json_tour.ipynb
+++ b/examples/parse/demo_json_tour.ipynb
@@ -11,7 +11,12 @@
     "\n",
     "The `JobResult` object is the main object returned by the LlamaParse API. It contains all the information about the job, including the parsed data, metadata, and any errors.\n",
     "\n",
-    "This notebook walks through each component of the `JobResult` object and shows you what it contains."
+    "This notebook walks through each component of the `JobResult` object and shows you what it contains.\n",
+    "\n",
+    "Status:\n",
+    "| Last Executed | Version | State      |\n",
+    "|---------------|---------|------------|\n",
+    "| Aug-19-2025   | 0.6.61  | Maintained |"
    ]
   },
   {
@@ -94,7 +99,14 @@
    "source": [
     "from llama_cloud_services import LlamaParse\n",
     "\n",
-    "parser = LlamaParse()\n",
+    "parser = LlamaParse(\n",
+    "    parse_mode=\"parse_page_with_agent\",\n",
+    "    model=\"openai-gpt-4-1-mini\",\n",
+    "    high_res_ocr=True,\n",
+    "    adaptive_long_table=True,\n",
+    "    outlined_table_extraction=True,\n",
+    "    output_tables_as_HTML=True,\n",
+    ")\n",
     "result = await parser.aparse(\"./san_francisco_budget_2023.pdf\")"
    ]
   },
@@ -311,7 +323,16 @@
     }
    ],
    "source": [
-    "parser = LlamaParse(take_screenshot=True)\n",
+    "parser = LlamaParse(\n",
+    "    parse_mode=\"parse_page_with_agent\",\n",
+    "    model=\"openai-gpt-4-1-mini\",\n",
+    "    high_res_ocr=True,\n",
+    "    adaptive_long_table=True,\n",
+    "    outlined_table_extraction=True,\n",
+    "    output_tables_as_HTML=True,\n",
+    "    # Take screenshot of the page\n",
+    "    take_screenshot=True,\n",
+    ")\n",
     "result = await parser.aparse(\"./san_francisco_budget_2023.pdf\")"
    ]
   },
@@ -481,7 +502,16 @@
     }
    ],
    "source": [
-    "parser = LlamaParse(annotate_links=True)\n",
+    "parser = LlamaParse(\n",
+    "    parse_mode=\"parse_page_with_agent\",\n",
+    "    model=\"openai-gpt-4-1-mini\",\n",
+    "    high_res_ocr=True,\n",
+    "    adaptive_long_table=True,\n",
+    "    outlined_table_extraction=True,\n",
+    "    output_tables_as_HTML=True,\n",
+    "    # Annotate links in the document\n",
+    "    annotate_links=True,\n",
+    ")\n",
     "result = await parser.aparse(\"./basic-link-1.pdf\")"
    ]
   },
@@ -532,7 +562,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "llama-parse-aNC435Vv-py3.10",
    "language": "python",
    "name": "python3"
   },
