--- a/examples/parse/demo_mongodb.ipynb
+++ b/examples/parse/demo_mongodb.ipynb
@@ -13,7 +13,12 @@
     "\n",
     "We illustrate the process of using llama-parse to parse a PDF document, then index the document with a MongoDB vector store, and subsequently perform basic queries against this store.\n",
     "\n",
-    "This notebook is structured similarly to quick start guides, aiming to introduce users to utilizing llama-parse in conjunction with a MongoDB Atlas VectorSearch."
+    "This notebook is structured similarly to quick start guides, aiming to introduce users to utilizing llama-parse in conjunction with a MongoDB Atlas VectorSearch.\n",
+    "\n",
+    "Status:\n",
+    "| Last Executed | Version | State      |\n",
+    "|---------------|---------|------------|\n",
+    "| Aug-19-2025   | 0.6.61  | Maintained |"
    ]
   },
   {
@@ -29,8 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install llama-index llama-parse\n",
-    "%pip install llama-index-vector-stores-mongodb llama-index-llms-openai"
+    "%pip install llama-cloud-services\n",
+    "%pip install \"llama-index-vector-stores-mongodb>=0.8.0<0.9.0\" \"llama-index>=0.13.0<0.14.0\""
    ]
   },
   {
@@ -50,8 +55,10 @@
     "\n",
     "os.environ[\n",
     "    \"LLAMA_CLOUD_API_KEY\"\n",
-    "] = \"\"  # Get it from https://cloud.llamaindex.ai/api-key\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"\"  # Get it from https://platform.openai.com/api-keys"
+    "] = \"llx-...\"  # Get it from https://cloud.llamaindex.ai/api-key\n",
+    "os.environ[\n",
+    "    \"OPENAI_API_KEY\"\n",
+    "] = \"sk-...\"  # Get it from https://platform.openai.com/api-keys"
    ]
   },
   {
@@ -68,6 +75,20 @@
     "from llama_index.embeddings.openai import OpenAIEmbedding\n",
     "from llama_index.core import VectorStoreIndex, StorageContext\n",
     "from llama_index.core.node_parser import SentenceSplitter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core import Settings\n",
+    "from llama_index.llms.openai import OpenAI\n",
+    "from llama_index.embeddings.openai import OpenAIEmbedding\n",
+    "\n",
+    "Settings.llm = OpenAI(model=\"gpt-5-mini\")\n",
+    "Settings.embed_model = OpenAIEmbedding(model=\"text-embedding-3-small\")"
    ]
   },
   {
@@ -127,12 +148,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started parsing the file under job_id 09a49745-9f21-4190-9de8-27e4e1a4bdf5\n"
+      "Started parsing the file under job_id 993fa45f-f4ed-4d49-9032-794b3470305a\n",
+      "."
      ]
     }
    ],
    "source": [
-    "result = await LlamaParse().aparse(file_path)\n",
+    "result = await LlamaParse(\n",
+    "    parse_mode=\"parse_page_with_agent\",\n",
+    "    model=\"openai-gpt-4-1-mini\",\n",
+    "    high_res_ocr=True,\n",
+    "    adaptive_long_table=True,\n",
+    "    outlined_table_extraction=True,\n",
+    "    output_tables_as_HTML=True,\n",
+    ").aparse(file_path)\n",
+    "\n",
     "documents = result.get_text_documents(split_by_page=False)"
    ]
   },
@@ -145,19 +175,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rmer - model architecture.\n",
-      "The Transformer follows this overall architecture using stacked self-attention and point-wise, fully\n",
-      "connected layers for both the encoder and decoder, shown in the left and right halves of Figure 1,\n",
-      "respectively.\n",
-      "3.1   Encoder and Decoder Stacks\n",
-      "Encoder:     The encoder is composed of a stack of N = 6 identical layers. Each layer has two\n",
-      "sub-layers. The first is a multi-head self-attention mechanism, and the second is a simple, position-\n",
-      "wise fully connected feed-forward network. We employ a residual connection [11] around each of\n",
-      "the two sub-layers, followed by layer normalization [1]. That is, the output of each sub-layer is\n",
-      "LayerNorm(x + Sublayer(x)), where Sublayer(x) is the function implemented by the sub-layer\n",
-      "itself. To facilitate these residual connections, all sub-layers in the model, as well as the embedding\n",
-      "layers, produce outputs of dimension dmodel = 512.\n",
-      "Decoder:    The decoder is also composed of a stack of N = 6 identical layers. In addition \n"
+      " sub-layer, which performs multi-head\n",
+      "attention over the output of the encoder stack. Similar to the encoder, we employ residual connections\n",
+      "around each of the sub-layers, followed by layer normalization. We also modify the self-attention\n",
+      "sub-layer in the decoder stack to prevent positions from attending to subsequent positions. This\n",
+      "masking, combined with fact that the output embeddings are offset by one position, ensures that the\n",
+      "predictions for position i can depend only on the known outputs at positions less than i.\n",
+      "\n",
+      "3.2  Attention\n",
+      "An attention function can be described as mapping a query and a set of key-value pairs to an output,\n",
+      "where the query, keys, values, and output are all vectors. The output is computed as a weighted sum\n",
+      "\n",
+      "                                     3\n",
+      "---\n",
+      "              Scaled Dot-Product Attention    Multi-Head Attention\n",
+      "\n",
+      "                                                                          Linear\n",
+      "              MatMul\n",
+      "\n",
+      "  SoftMax                                 \n"
      ]
     }
    ],
@@ -180,10 +216,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mongo_uri = os.environ[\"MONGO_URI\"]\n",
+    "mongo_uri = \"<mongodb_uri>\"\n",
     "\n",
     "mongodb_client = pymongo.MongoClient(mongo_uri)\n",
-    "mongodb_vector_store = MongoDBAtlasVectorSearch(mongodb_client)"
+    "mongodb_vector_store = MongoDBAtlasVectorSearch(mongodb_client)\n",
+    "\n",
+    "mongodb_vector_store.create_vector_search_index(\n",
+    "    dimensions=1536, path=\"embedding\", similarity=\"cosine\"\n",
+    ")"
    ]
   },
   {
@@ -222,7 +262,6 @@
     "index = VectorStoreIndex(\n",
     "    nodes=nodes,\n",
     "    storage_context=storage_context,\n",
-    "    embed_model=OpenAIEmbedding(),\n",
     ")"
    ]
   },
@@ -253,7 +292,7 @@
      "text": [
       "\n",
       "***********New LlamaParse+ Basic Query Engine***********\n",
-      "The BLEU score on the WMT 2014 English-to-German translation task is 28.4.\n"
+      "28.4 BLEU\n"
      ]
     }
    ],
@@ -274,39 +313,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We varied the learning\n",
+      "For our big models,(described on the\n",
+      "bottom line of table 3), step time was 1.0 seconds. The big models were trained for 300,000 steps\n",
+      "(3.5 days).\n",
+      "\n",
+      "5.3  Optimizer\n",
+      "\n",
+      "We used the Adam optimizer [20] with β1 = 0.9, β2 = 0.98 and ϵ = 10−9. We varied the learning\n",
       "rate over the course of training, according to the formula:\n",
-      "               lrate = d−0.5                                                                          (3)\n",
-      "                         model · min(step_num−0.5, step_num · warmup_steps−1.5)\n",
+      "\n",
+      "              lrate = d−0.5 · min(step_num−0.5, step_num · warmup_steps−1.5)       (3)\n",
+      "              model\n",
+      "\n",
       "This corresponds to increasing the learning rate linearly for the first warmup_steps training steps,\n",
       "and decreasing it thereafter proportionally to the inverse square root of the step number. We used\n",
       "warmup_steps = 4000.\n",
-      "5.4   Regularization\n",
+      "\n",
+      "5.4  Regularization\n",
+      "\n",
       "We employ three types of regularization during training:\n",
-      "                                                    7\n",
+      "\n",
+      "                                        7\n",
       "---\n",
       "Table 2: The Transformer achieves better BLEU scores than previous state-of-the-art models on the\n",
       "English-to-German and English-to-French newstest2014 tests at a fraction of the training cost.\n",
-      "        Model                                          BLEU               Training Cost (FLOPs)\n",
-      "                                                 EN-DE      EN-FR          EN-DE         EN-FR\n",
-      "        ByteNet [18]                              23.75\n",
-      "        Deep-Att + PosUnk [39]                               39.2                       1.0 · 1020\n",
-      "        GNMT + RL [38]                            24.6       39.92        2.3 · 1019    1.4 · 1020\n",
-      "        ConvS2S [9]                               25.16      40.46        9.6 · 1018    1.5 · 1020\n",
-      "        MoE [32]                                  26.03      40.56        2.0 · 1019    1.2 · 1020\n",
-      "        Deep-Att + PosUnk Ensemble [39]                      40.4                       8.0 · 1020\n",
-      "        GNMT + RL Ensemble [38]                   26.30      41.16        1.8 · 1020    1.1 · 1021\n",
-      "        ConvS2S Ensemble [9]                      26.36      41.29        7.7 · 1019    1.2 · 1021\n",
-      "        Transformer (base model)                  27.3       38.1               3.3 · 1018\n",
-      "        Transformer (big)                         28.4       41.8                2.3 · 1019\n",
-      "Residual Dropout       We apply dropout [33] to the output of each sub-layer, before it is added to the\n",
+      "\n",
+      "     Model                               BLEU            Training Cost (FLOPs)\n",
+      "                                         EN-DE EN-FR                   EN-DE  EN-FR\n",
+      "     ByteNet [18]               23.75\n",
+      "     Deep-Att + PosUnk [39]                     39.2                          1.0 · 1020\n",
+      "     GNMT + RL [38]              24.6          39.92     2.3 · 1019           1.4 · 1020\n",
+      "     ConvS2S [9]                25.16          40.46     9.6 · 1018           1.5 · 1020\n",
+      "     MoE [32]                   26.03          40.56     2.0 · 1019           1.2 · 1020\n",
+      "     Deep-Att + PosUnk Ensemble [39]            40.4                          8.0 · 1020\n",
+      "     GNMT + RL Ensemble [38]    26.30          41.16     1.8 · 1020           1.1 · 1021\n",
+      "     ConvS2S Ensemble [9]       26.36          41.29     7.7 · 1019           1.2 · 1021\n",
+      "     Transformer (base model)    27.3           38.1     3.3 · 1018\n",
+      "     Transformer (big)           28.4           41.8     2.3 · 1019\n",
+      "\n",
+      "Residual Dropout      We apply dropout [33] to the output of each sub-layer, before it is added to the\n",
       "sub-layer input and normalized. In addition, we apply dropout to the sums of the embeddings and the\n",
       "positional encodings in both the encoder and decoder stacks. For the base model, we use a rate of\n",
       "Pdrop = 0.1.\n",
-      "Label Smoothing        During training, we employed label smoothing of value ϵls = 0.1 [36]. This\n",
+      "\n",
+      "Label Smoothing             During training, we employed label smoothing of value ϵls = 0.1 [36]. This\n",
       "hurts perplexity, as the model learns to be more unsure, but improves accuracy and BLEU score.\n",
+      "\n",
       "6    Results\n",
-      "6.1   Machine Translation\n",
+      "\n",
+      "6.1  Machine Translation\n",
+      "\n",
       "On the WMT 2014 English-to-German translation task, the big transformer model (Transformer (big)\n",
       "in Table 2) outperforms the best previously reported models (including ensembles) by more than 2.0\n",
       "BLEU, establishing a new state-of-the-art BLEU score of 28.4. The configuration of this model is\n",
@@ -319,11 +375,7 @@
       "dropout rate Pdrop = 0.1, instead of 0.3.\n",
       "For the base models, we used a single model obtained by averaging the last 5 checkpoints, which\n",
       "were written at 10-minute intervals. For the big models, we averaged the last 20 checkpoints. We\n",
-      "used beam search with a beam size of 4 and length penalty α = 0.6 [38]. These hyperparameters\n",
-      "were chosen after experimentation on the development set. We set the maximum output length during\n",
-      "inference to input length + 50, but terminate early when possible [38].\n",
-      "Table 2 summarizes our results and compares our translation quality and training costs to other model\n",
-      "architectures from the literature.\n"
+      "used beam search with a beam size of 4 and length penalty α = 0.6 [38].\n"
      ]
     }
    ],
@@ -338,9 +390,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "anthropic_env",
+   "display_name": ".venv",
    "language": "python",
-   "name": "anthropic_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -352,11 +404,6 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
-   }
   }
  },
  "nbformat": 4,
