--- a/examples/parse/excel/o1_excel_rag.ipynb
+++ b/examples/parse/excel/o1_excel_rag.ipynb
@@ -20,7 +20,12 @@
     "When interacting with our enterprise customers, we've identified two prominent types of queries. Let's check how they perform with the o1 models:\n",
     "\n",
     "1. Queries requesting exact values.\n",
-    "2. Queries using the greater than/less than (>/ <) operators."
+    "2. Queries using the greater than/less than (>/ <) operators.\n",
+    "\n",
+    "Status:\n",
+    "| Last Executed | Version | State      |\n",
+    "|---------------|---------|------------|\n",
+    "| Before Feb 2025  | N/A  | Deprecated |"
    ]
   },
   {
