--- a/examples/parse/multimodal/insurance_rag.ipynb
+++ b/examples/parse/multimodal/insurance_rag.ipynb
@@ -15,6 +15,11 @@
    "source": [
     "This cookbook shows how to use LlamaParse and OpenAI's multimodal GPT-4o model to parse auto insurance claim documents that contain complex tabular data. In this example, we will use an auto insurance claim template form, which contains complex tabular inputs regarding information about the location of the accident, accident description, information about vehicles of both parties, and injury information. The template is shown below.\n",
     "\n",
+    "Status:\n",
+    "| Last Executed | Version | State      |\n",
+    "|---------------|---------|------------|\n",
+    "| Prior to Feb 2025   | N/A  | Deprecated |\n",
+    "\n",
     "![Auto Insurance Template](https://github.com/user-attachments/assets/aadbaa5b-16d2-490f-be35-f8ee06571633)\n",
     "\n",
     "This example demonstrates how LlamaParse can be used on insurance documents, which often contains complex tabular data. We parse these tabluar PDF files into markdown-formatted tables, which can be indexed and queried over with a `VectorStoreIndex`. This can help insurance companies accelerate the process of gathering information about car accidents from insurance claim documents."
@@ -35,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install llama-index"
+    "%pip install \"llama-index>=0.13.0<0.14.0\" llama-cloud-services"
    ]
   },
   {
