--- a/examples/parse/multimodal/legal_rag.ipynb
+++ b/examples/parse/multimodal/legal_rag.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Install LlamaIndex, download the data, and apply `nest_asyncio`."
+    "Install LlamaIndex, download the data, and set your API keys."
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install llama-index llama-parse"
+    "%pip install \"llama-index>=0.13.0<0.14.0\" llama-cloud-services"
    ]
   },
   {
@@ -55,17 +55,6 @@
     "!wget https://github.com/user-attachments/files/16447759/data.zip -O data.zip\n",
     "!unzip -o data.zip\n",
     "!rm data.zip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import nest_asyncio\n",
-    "\n",
-    "nest_asyncio.apply()"
    ]
   },
   {
@@ -83,8 +72,8 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"<Your OpenAI API Key>\"\n",
-    "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"<Your LlamaCloud API Key>\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
+    "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-...\""
    ]
   },
   {
@@ -105,11 +94,12 @@
     "from llama_cloud_services import LlamaParse\n",
     "\n",
     "parser = LlamaParse(\n",
-    "    result_type=\"markdown\",\n",
-    "    parsing_instruction=\"Provided are a series of US legal documents.\",\n",
-    "    use_vendor_multimodal_model=True,\n",
-    "    vendor_multimodal_model_name=\"openai-gpt4o\",\n",
-    "    show_progress=True,\n",
+    "    parse_mode=\"parse_page_with_agent\",\n",
+    "    model=\"openai-gpt-4-1-mini\",\n",
+    "    high_res_ocr=True,\n",
+    "    adaptive_long_table=True,\n",
+    "    outlined_table_extraction=True,\n",
+    "    output_tables_as_HTML=True,\n",
     ")\n",
     "\n",
     "DATA_DIR = \"data\"\n",
@@ -143,22 +133,117 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parsing files: 100%|██████████| 8/8 [01:25<00:00, 10.67s/it]\n"
+      "Getting job results:   0%|          | 0/8 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started parsing the file under job_id dad7b215-360c-46a6-857e-983249441395\n",
+      "Started parsing the file under job_id bcfb24fb-0b30-4bd5-a87d-2a81b2d4298a\n",
+      "Started parsing the file under job_id 50417384-e3fa-44fa-9f58-8344c129cedf\n",
+      "Started parsing the file under job_id 49b0620f-e9fa-4736-801f-aadd6d6e21dd\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Getting job results:  12%|█▎        | 1/8 [00:23<02:43, 23.42s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started parsing the file under job_id 729ceca5-2940-406d-b29a-0252dbf11e15\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Getting job results:  38%|███▊      | 3/8 [00:41<00:56, 11.20s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started parsing the file under job_id 0733a9c5-d4a6-4242-9bd2-f61e931424dd\n",
+      "Started parsing the file under job_id a948a2f8-521a-412a-9cbd-4574814a8d2c\n",
+      "."
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Getting job results:  50%|█████     | 4/8 [00:44<00:32,  8.19s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started parsing the file under job_id d9929a63-4f84-4567-abd9-bc352eee1db0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Getting job results:  75%|███████▌  | 6/8 [01:07<00:19,  9.70s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...."
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Getting job results:  88%|████████▊ | 7/8 [02:47<00:39, 39.42s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "."
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Getting job results: 100%|██████████| 8/8 [03:32<00:00, 26.61s/it]\n"
      ]
     }
    ],
    "source": [
-    "documents = parser.load_data(\n",
-    "    files,\n",
-    "    extra_info={\"name\": \"US legal documents provided by the Library of Congress.\"},\n",
-    ")"
+    "results = await parser.aparse(files)\n",
+    "\n",
+    "documents = []\n",
+    "for result in results:\n",
+    "    documents.extend(result.get_markdown_documents(split_by_page=True))\n",
+    "\n",
+    "for document in documents:\n",
+    "    document.metadata[\n",
+    "        \"context\"\n",
+    "    ] = \"US legal documents provided by the Library of Congress.\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Setup LlamaIndex. Set the default LLM to GPT-4o (a multi-modal model), and create an index from the documents, and persist these documents to disk. If these documents have already been persisted, then load index from the persisted docs."
+    "Setup LlamaIndex for querying the data using RAG"
    ]
   },
   {
@@ -169,25 +254,18 @@
    "source": [
     "from llama_index.core import (\n",
     "    VectorStoreIndex,\n",
-    "    StorageContext,\n",
-    "    load_index_from_storage,\n",
     "    Settings,\n",
     ")\n",
     "from llama_index.embeddings.openai import OpenAIEmbedding\n",
     "from llama_index.llms.openai import OpenAI\n",
     "\n",
     "embed_model = OpenAIEmbedding(model=\"text-embedding-3-large\")\n",
-    "llm = OpenAI(\"gpt-4o\")\n",
+    "llm = OpenAI(\"gpt-5-mini\")\n",
     "\n",
     "Settings.llm = llm\n",
     "Settings.embed_model = embed_model\n",
     "\n",
-    "if not os.path.exists(\"storage_legal\"):\n",
-    "    index = VectorStoreIndex(documents, embed_model=embed_model)\n",
-    "    index.storage_context.persist(persist_dir=\"./storage_legal\")\n",
-    "else:\n",
-    "    ctx = StorageContext.from_defaults(persist_dir=\"./storage_legal\")\n",
-    "    index = load_index_from_storage(ctx)\n",
+    "index = VectorStoreIndex.from_documents(documents)\n",
     "\n",
     "query_engine = index.as_query_engine()"
    ]
@@ -207,7 +285,7 @@
     {
      "data": {
       "text/markdown": [
-       "The majority of Barre Savings Bank's loans went to residential real estate, specifically 1-4 family mortgages, which accounted for 78.7 percent of the total loans."
+       "The majority went to residential real estate lending—primarily 1–4 family mortgages (about 78.7% of loans, with home equity lines adding another 8.7%, for a total of 87.4%)."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -234,7 +312,12 @@
     {
      "data": {
       "text/markdown": [
-       "Mr. Kubarych believes foreign markets are important because they are attractive to foreign investors for the same reasons they are attractive to Americans. The economic data is strong, and the high tech boom has created a positive perception that overshadows longer-term vulnerabilities. Additionally, foreign investors have high expectations for the U.S. to maintain a firm monetary policy in response to inflation and to act as a superpower rather than pursuing narrow nationalist economic policies."
+       "He says foreign markets (especially U.S. markets) are attractive because:\n",
+       "- The underlying economic data are strong.\n",
+       "- The high‑tech boom creates a “halo” that attracts attention and investment.\n",
+       "- There is broad, nearly bipartisan political/economic stability.\n",
+       "- Foreign investors expect sensible foreign‑policy behavior and a firm monetary policy response to any rise in inflation.\n",
+       "- Large foreign institutions (investment funds, insurers, banks) therefore see the markets as a safe, desirable place to put money."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -259,7 +342,7 @@
     {
      "data": {
       "text/markdown": [
-       "House Speaker Nancy Pelosi and the Democratic majority are against the proposal of offshore drilling in California. Pelosi stated that offshore drilling is \"off the table,\" and Democrats have been consistently unwilling to bend environmental rules. They argue that oil companies are not using the 68 million acres of federal lands already leased to them, either because it takes a long time or they lack the necessary equipment."
+       "House Democrats — including Speaker Nancy Pelosi — and other Democratic lawmakers oppose drilling off the California coast. They say it should be \"off the table\" for environmental reasons, point out that there are already millions of acres of federal lands leased to oil companies that aren’t being developed, and note oil companies have told Pelosi those leases aren’t being used because development takes a long time or the companies lack the equipment. No Democrats signed on to the proposed bill."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -284,7 +367,7 @@
     {
      "data": {
       "text/markdown": [
-       "The purpose of the Ocean Science and Technology Subcommittee (SOST) is to advise and assist the Committee on Environment, Natural Resources, and Sustainability on national issues of ocean science and technology. The SOST aims to contribute to the goals for Federal ocean science and technology by developing coordinated interagency strategies. It also retains the functions of the previously-chartered Joint Subcommittee on Ocean Science and Technology and serves as the Ocean Science and Technology Interagency Policy Committee for the National Ocean Council."
+       "To advise and assist the Committee on Environment, Natural Resources, and Sustainability on national ocean science and technology issues and to advance federal ocean S&T goals by developing coordinated interagency strategies. It also serves as the National Ocean Council’s Ocean Science and Technology Interagency Policy Committee and retains the mandated functions of the prior joint subcommittee. Key roles include fostering national ocean S&T priorities; facilitating interagency coordination of research, technology, infrastructure, education, and observation/mapping programs; expanding fundamental knowledge of the ocean and its links to the Earth system and society; advancing modeling and forecasting; advising on science and technology for ecosystem-based management and stewardship; supporting use of ocean S&T in coastal and marine policy; and recommending scientific and technical assessments."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -309,7 +392,7 @@
     {
      "data": {
       "text/markdown": [
-       "The immigration appeal is dismissed because the petitioner is not a U.S. citizen, and therefore, is not eligible to file a Petition for Alien Fiancé(e) (Form I-129F) on behalf of the beneficiary. The relevant law provides nonimmigrant classification only to aliens who are the fiancé(e)s of U.S. citizens."
+       "The appeal was dismissed because the petitioner is not a U.S. citizen, and the K‑1 fiancé(e) classification (Form I‑129F) is available only for fiancés of U.S. citizens. The denial is without prejudice, so the petitioner may file a new I‑129F if he becomes a U.S. citizen."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -332,7 +415,7 @@
     {
      "data": {
       "text/markdown": [
-       "An advance pricing agreement (APA) is a binding contract between a taxpayer and the IRS that establishes an approved transfer pricing method (TPM) for specific transactions. This agreement aims to prevent disputes over transfer pricing by ensuring that the taxpayer's tax returns for the covered years are consistent with the agreed TPM. APAs can be unilateral, involving only the taxpayer and the IRS, or bilateral/multilateral, involving agreements with one or more foreign tax authorities to avoid double taxation."
+       "An advance pricing agreement (APA) is a binding contract between a taxpayer and the IRS that establishes an approved transfer pricing method (TPM) for specified related‑party (covered) transactions and tax years. If the taxpayer files its returns consistent with the agreed TPM, the IRS agrees not to seek an adjustment under IRC § 482 for those transactions. An APA can be unilateral (between the taxpayer and the IRS) or bilateral/multilateral (also agreeing with one or more foreign competent authorities), and is intended to resolve transfer‑pricing disputes in advance and, where bilateral, to reduce the risk of double taxation."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -350,7 +433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llama-parse-5ZmnAQ0r-py3.11",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
