--- a/examples/parse/other_files/demo_ppt_basic.ipynb
+++ b/examples/parse/other_files/demo_ppt_basic.ipynb
@@ -11,21 +11,22 @@
     "\n",
     "We use LlamaParse to load in our slides in .pptx format, and use LlamaIndex to build a RAG pipeline over these files.\n",
     "\n",
-    "**NOTE**: LlamaParse is capable of image extraction through JSON mode, in this notebook we stick with text."
+    "**NOTE**: LlamaParse is capable of image extraction through JSON mode, in this notebook we stick with text.\n",
+    "\n",
+    "Status:\n",
+    "| Last Executed | Version | State      |\n",
+    "|---------------|---------|------------|\n",
+    "| Prior to Feb-2025   | N/A  | Deprecated |"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14cdcfaf-88b4-4489-9910-e362e0ccec53",
+   "id": "bbd1a042",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import nest_asyncio\n",
-    "\n",
-    "nest_asyncio.apply()\n",
-    "\n",
-    "from llama_cloud_services import LlamaParse"
+    "%pip install \"llama-index>=0.13.0<0.14.0\" llama-cloud-services"
    ]
   },
   {
@@ -37,7 +38,8 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-\""
+    "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-...\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-...\""
    ]
   },
   {
@@ -369,9 +371,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llama_parse",
+   "display_name": ".venv",
    "language": "python",
-   "name": "llama_parse"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
