--- a/examples/parse/other_files/demo_ppt_financial.ipynb
+++ b/examples/parse/other_files/demo_ppt_financial.ipynb
@@ -6,7 +6,12 @@
    "source": [
     "# LlamaParse - Parsing Financial Powerpoints 📊\n",
     "\n",
-    "In this cookbook we show you how to use LlamaParse to parse a financial powerpoint."
+    "In this cookbook we show you how to use LlamaParse to parse a financial powerpoint.\n",
+    "\n",
+    "Status:\n",
+    "| Last Executed | Version | State      |\n",
+    "|---------------|---------|------------|\n",
+    "| Prior to Feb-2025   | N/A  | Deprecated |"
    ]
   },
   {
