--- a/examples/parse/parsing_modes/demo_auto_mode.ipynb
+++ b/examples/parse/parsing_modes/demo_auto_mode.ipynb
@@ -8,6 +8,11 @@
     "\n",
     "<a href=\"https://colab.research.google.com/github/run-llama/llama_cloud_services/blob/main/examples/parse/parsing_modes/demo_auto_mode.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
+    "Status:\n",
+    "| Last Executed | Version | State      |\n",
+    "|---------------|---------|------------|\n",
+    "| Prior to Feb-2025   | N/A  | Deprecated |\n",
+    "\n",
     "![](diagram.jpg)\n",
     "\n",
     "Many documents can have varying complexity across pages - some pages have text, and other pages have images. The text-only pages only require cheap parsing modes, whereas the image-based pages require more advanced modes. In this notebook we show you how to take advantage of \"auto mode\" in LlamaParse which adaptively parses different pages according to different modes, which lets you get optimal performance at the cheapest cost.\n"
