--- a/examples/parse/parsing_modes/demo_layout_agent_mode_visual_citations.ipynb
+++ b/examples/parse/parsing_modes/demo_layout_agent_mode_visual_citations.ipynb
@@ -8,6 +8,11 @@
     "\n",
     "<a href=\"https://colab.research.google.com/github/run-llama/llama_cloud_services/blob/main/examples/parse/parsing_modes/demo_layout_agent_mode_visual_citations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
+    "Status:\n",
+    "| Last Executed | Version | State      |\n",
+    "|---------------|---------|------------|\n",
+    "| Prior to Feb-2025   | N/A  | Deprecated |\n",
+    "\n",
     "This cookbook will show you how to leverage LlamaParse's new Layout Agent mode to build a query engine that provides visually grounded citations. But first—what exactly is Layout Agent mode?\n",
     "\n",
     "## Layout Agent Mode\n",
