--- a/examples/parse/demo_advanced.ipynb
+++ b/examples/parse/demo_advanced.ipynb
@@ -10,7 +10,12 @@
     "\n",
     "This notebook is a complete walkthrough for using LlamaParse with advanced indexing/retrieval techniques in LlamaIndex over the Apple 10K Filing. \n",
     "\n",
-    "This allows us to ask sophisticated questions that aren't possible with \"naive\" parsing/indexing techniques with existing models."
+    "This allows us to ask sophisticated questions that aren't possible with \"naive\" parsing/indexing techniques with existing models.\n",
+    "\n",
+    "Status:\n",
+    "| Last Executed | Version | State      |\n",
+    "|---------------|---------|------------|\n",
+    "| Aug-18-2025   | 0.6.61  | Maintained |"
    ]
   },
   {
@@ -19,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install llama-index llama-cloud-services"
+    "%pip install llama-cloud-services \"llama-index>=0.13.2<0.14.0\" \"llama-index-embeddings-huggingface>=0.6.0<0.7.0\" torchvision \"sentence-transformers<5.0\""
    ]
   },
   {
@@ -50,7 +55,7 @@
     "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-...\"\n",
     "\n",
     "# Using OpenAI API for embeddings/llms\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"sk-proj-...\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-...\""
    ]
   },
   {
@@ -64,7 +69,7 @@
     "from llama_index.core import Settings\n",
     "\n",
     "embed_model = OpenAIEmbedding(model_name=\"text-embedding-3-small\")\n",
-    "llm = OpenAI(model=\"gpt-4o-mini\")\n",
+    "llm = OpenAI(model=\"gpt-5-mini\")\n",
     "\n",
     "Settings.llm = llm\n",
     "Settings.embed_model = embed_model"
@@ -91,14 +96,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started parsing the file under job_id e403a457-1721-4093-82bf-4a316d2d637a\n"
+      "Started parsing the file under job_id f347cb97-dfe2-4677-991a-5ceba6d9fc6a\n"
      ]
     }
    ],
    "source": [
     "from llama_cloud_services import LlamaParse\n",
     "\n",
-    "result = await LlamaParse(take_screenshot=True).aparse(\"./apple_2021_10k.pdf\")\n",
+    "result = await LlamaParse(\n",
+    "    # The parsing mode\n",
+    "    parse_mode=\"parse_page_with_agent\",\n",
+    "    # The model to use\n",
+    "    model=\"openai-gpt-4-1-mini\",\n",
+    "    # Whether to use high resolution OCR (Slower)\n",
+    "    high_res_ocr=True,\n",
+    "    # Adaptive long table. LlamaParse will try to detect long tables across pages\n",
+    "    adaptive_long_table=True,\n",
+    "    outlined_table_extraction=True,\n",
+    "    output_tables_as_HTML=True,\n",
+    "    # Whether to take a screenshot of the page, needed for screenshot-retrieval\n",
+    "    take_screenshot=True,\n",
+    ").aparse(\"./apple_2021_10k.pdf\")\n",
     "\n",
     "markdown_nodes = await result.aget_markdown_nodes(split_by_page=True)\n",
     "screenshot_image_nodes = await result.aget_image_nodes(\n",
@@ -134,7 +152,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-18 20:53:51,246 - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-08-18 20:53:52,143 - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n"
+     ]
+    }
+   ],
    "source": [
     "from llama_index.core import VectorStoreIndex\n",
     "\n",
@@ -158,7 +185,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-18 20:53:53,070 - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n"
+     ]
+    }
+   ],
    "source": [
     "from llama_index.core import VectorStoreIndex\n",
     "\n",
@@ -170,7 +205,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/loganmarkewich/llama_parse/py/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2025-08-18 20:53:55,230 - INFO - Load pretrained SentenceTransformer: llamaindex/vdr-2b-multi-v1\n",
+      "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n",
+      "2025-08-18 20:54:05,369 - INFO - 2 prompts are loaded, with the keys: ['query', 'text']\n",
+      "Generating embeddings:   0%|          | 0/82 [00:00<?, ?it/s]2025-08-18 20:54:06,599 - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "Generating embeddings: 100%|██████████| 82/82 [00:01<00:00, 61.24it/s]\n",
+      "Generating image embeddings: 100%|██████████| 82/82 [26:06<00:00, 19.11s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "from llama_index.core.indices import MultiModalVectorStoreIndex\n",
     "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
@@ -182,7 +232,7 @@
     "    model_name=\"llamaindex/vdr-2b-multi-v1\",\n",
     "    embed_batch_size=2,\n",
     "    trust_remote_code=True,\n",
-    "    cache_folder=\"./hf_cache_2\",\n",
+    "    cache_folder=\"./hf_cache\",\n",
     "    device=\"cpu\",  # set to \"cuda\" if you have a GPU or remove to auto-detect\n",
     ")\n",
     "\n",
@@ -338,18 +388,57 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-18 21:20:29,006 - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-08-18 21:20:38,721 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
       "***********Baseline Query Engine***********\n",
-      "The total fair value of marketable securities in 2020 was $190,516 million.\n",
+      "The total fair value of marketable securities in 2020 was $153,814 million (approximately $153.8 billion).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-18 21:20:39,233 - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-08-18 21:20:48,185 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "***********Markdown Query Engine***********\n",
-      "The total fair value of marketable securities in 2020 was $191,830 million.\n",
+      "The total fair value was $191,830 million (approximately $191.83 billion).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-18 21:20:48,515 - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-08-18 21:21:09,275 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "***********MultiModal Query Engine***********\n",
-      "The total fair value of marketable securities in 2020 was $191,830 million.\n"
+      "The table shows:\n",
+      "\n",
+      "- Total fair value (cash, cash equivalents and marketable securities) in 2020: $191,830 million (≈ $191.83 billion).  \n",
+      "- Total marketable securities (current + non‑current) in 2020: $52,927 + $100,887 = $153,814 million (≈ $153.81 billion).\n"
      ]
     }
    ],
@@ -391,7 +480,7 @@
     {
      "data": {
       "text/plain": [
-       "'images/page_41.jpg'"
+       "'images/page_42.jpg'"
       ]
      },
      "execution_count": null,
@@ -416,31 +505,63 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-18 21:35:33,281 - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-08-18 21:35:40,959 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
       "***********Baseline Query Engine***********\n",
-      "The effective interest rates for the debt issuances in 2021 were as follows:\n",
-      "\n",
-      "- Floating-rate notes: 0.48% – 0.63%\n",
-      "- Fixed-rate notes: 0.03% – 4.78% for maturities from 2022 to 2060\n",
-      "- Fixed-rate notes issued in the second quarter: 0.75% – 2.81% for maturities from 2026 to 2061\n",
-      "- Fixed-rate notes issued in the fourth quarter: 1.43% – 2.86% for maturities from 2028 to 2061\n",
+      "- Second quarter 2021 fixed-rate notes (2026–2061): effective interest rates 0.75%–2.81%\n",
+      "- Fourth quarter 2021 fixed-rate notes (2028–2061): effective interest rates 1.43%–2.86%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-18 21:35:41,285 - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-08-18 21:35:49,132 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "***********Markdown Query Engine***********\n",
-      "The effective interest rates for the debt issuances in 2021 were as follows:\n",
-      "\n",
-      "- Floating-rate notes: 0.48% – 0.63%\n",
-      "- Fixed-rate notes: 0.03% – 4.78% for the 0.000% – 4.650% notes, 0.75% – 2.81% for the 0.700% – 2.800% notes, and 1.43% – 2.86% for the 1.400% – 2.850% notes.\n",
+      "- Floating-rate notes (2022): 0.48% – 0.63%\n",
+      "- Fixed-rate 0.000% – 4.650% notes (2022 – 2060): 0.03% – 4.78%\n",
+      "- Second-quarter 2021 fixed-rate notes (0.700% – 2.800%, 2026 – 2061): 0.75% – 2.81%\n",
+      "- Fourth-quarter 2021 fixed-rate notes (1.400% – 2.850%, 2028 – 2061): 1.43% – 2.86%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-18 21:35:49,411 - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-08-18 21:36:06,767 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "***********MultiModal Query Engine***********\n",
-      "The effective interest rates of all debt issuances in 2021 were as follows:\n",
+      "The effective interest rate ranges reported for the 2021 debt issuances were:\n",
       "\n",
-      "1. **Floating-rate notes**: 0.48% – 0.63%\n",
-      "2. **Fixed-rate 0.000% – 4.650% notes**: 0.03% – 4.78%\n",
-      "3. **Fixed-rate 0.700% – 2.800% notes**: 0.75% – 2.81%\n",
-      "4. **Fixed-rate 1.400% – 2.850% notes**: 1.43% – 2.86%\n"
+      "- Floating‑rate notes (2022): 0.48% – 0.63%  \n",
+      "- Fixed‑rate 0.000% – 4.650% notes (2022–2060): 0.03% – 4.78%  \n",
+      "- Q2 2021 fixed‑rate notes (0.700% – 2.800%, maturities 2026–2061): 0.75% – 2.81%  \n",
+      "- Q4 2021 fixed‑rate notes (1.400% – 2.850%, maturities 2028–2061): 1.43% – 2.86%\n"
      ]
     }
    ],
@@ -540,41 +661,65 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-18 21:36:07,790 - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-08-18 21:36:14,197 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
       "***********Baseline Query Engine***********\n",
-      "The current state taxes for the years 2019 to 2021 are as follows (in millions):\n",
-      "\n",
-      "- 2021: $1,620\n",
-      "- 2020: $455\n",
-      "- 2019: $475\n",
-      "\n",
-      "This indicates an increase of $1,165 million from 2020 to 2021, a decrease of $20 million from 2018 to 2019, and an increase of $80 million from 2019 to 2020.\n",
+      "State current tax (in millions):\n",
+      "- 2019: +$475 million\n",
+      "- 2020: +$455 million\n",
+      "- 2021: +$1,620 million\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-18 21:36:14,584 - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-08-18 21:36:22,084 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "***********Markdown Query Engine***********\n",
-      "The current state taxes for the years 2019 to 2021 are as follows (in millions):\n",
-      "\n",
-      "- **2021**: $1,620\n",
-      "- **2020**: $455\n",
-      "- **2019**: $475\n",
-      "\n",
-      "The changes in current state taxes from year to year are:\n",
-      "\n",
-      "- From 2019 to 2020: Decrease of $20 million\n",
-      "- From 2020 to 2021: Increase of $1,165 million\n",
+      "2019 — Current state taxes: $475 million (change vs prior year: n/a)  \n",
+      "2020 — Current state taxes: $455 million (change vs 2019: −$20 million)  \n",
+      "2021 — Current state taxes: $1,620 million (change vs 2020: +$1,165 million)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-18 21:36:22,441 - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-08-18 21:36:33,498 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "***********MultiModal Query Engine***********\n",
-      "The current state taxes for the years 2019 to 2021 are as follows (in millions):\n",
+      "The current state tax amounts (in millions) per the Note 5 table are:\n",
       "\n",
-      "- **2021**: $1,620\n",
-      "- **2020**: $455\n",
-      "- **2019**: $475\n",
+      "- 2019: $475\n",
+      "- 2020: $455  (−$20 vs 2019; −4.2%)\n",
+      "- 2021: $1,620 (+$1,165 vs 2020; +256.0%)\n",
       "\n",
-      "So, the changes are:\n",
-      "- From 2019 to 2020: Decrease of $20 million\n",
-      "- From 2020 to 2021: Increase of $1,165 million\n"
+      "All amounts are in millions of dollars.\n"
      ]
     }
    ],
@@ -597,7 +742,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llama-parse-aNC435Vv-py3.10",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
