--- a/examples/parse/demo_basic.ipynb
+++ b/examples/parse/demo_basic.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LlamaParse Usage"
+    "# LlamaParse Usage\n",
+    "\n",
+    "This notebook walks through the basic usage of LlamaParse.\n",
+    "\n",
+    "Status:\n",
+    "| Last Executed | Version | State      |\n",
+    "|---------------|---------|------------|\n",
+    "| Aug-18-2025   | 0.6.61  | Maintained |"
    ]
   },
   {
@@ -13,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install llama-index llama-cloud-services"
+    "%pip install \"llama-index>=0.13.2<0.14.0\" llama-cloud-services"
    ]
   },
   {
@@ -45,14 +52,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started parsing the file under job_id 79ae653c-4598-4bd0-ba6e-b3dab7eab57e\n"
+      "Started parsing the file under job_id ebc7e76e-addb-429b-8666-bee9c5832a84\n"
      ]
     }
    ],
    "source": [
     "from llama_cloud_services import LlamaParse\n",
     "\n",
-    "result = await LlamaParse().aparse(\"./attention.pdf\")"
+    "result = await LlamaParse(\n",
+    "    parse_mode=\"parse_page_with_agent\",\n",
+    "    model=\"openai-gpt-4-1-mini\",\n",
+    "    high_res_ocr=True,\n",
+    "    adaptive_long_table=True,\n",
+    "    outlined_table_extraction=True,\n",
+    "    output_tables_as_HTML=True,\n",
+    ").aparse(\"./attention.pdf\")"
    ]
   },
   {
@@ -64,7 +78,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1   Introduction\n",
+      "1 Introduction\n",
+      "\n",
       "Recurrent neural networks, long short-term memory [13] and gated recurrent [7] neural networks\n",
       "in particular, have been firmly established as state of the art approaches in sequence modeling and\n",
       "transduction problems such as language modeling and machine translation [35, 2, 5]. Numerous\n",
@@ -86,7 +101,9 @@
       "relying entirely on an attention mechanism to draw global dependencies between input and output.\n",
       "The Transformer allows for significantly more parallelization and can reach a new state of the art in\n",
       "translation quality after being trained for as little as twelve hours on eight P100 GPUs.\n",
-      "2   Background\n",
+      "\n",
+      "2 Background\n",
+      "\n",
       "The goal of reducing sequential computation also forms the foundation of the Extended Neural GPU\n",
       "[16], ByteNet [18] and ConvS2S [9], all of which use convolutional neural networks as basic building\n",
       "block, computing hidden representations in parallel for all input and output positions. In these models,\n",
@@ -107,13 +124,16 @@
       "entirely on self-attention to compute representations of its input and output without using sequence-\n",
       "aligned RNNs or convolution. In the following sections, we will describe the Transformer, motivate\n",
       "self-attention and discuss its advantages over models such as [17, 18] and [9].\n",
-      "3   Model Architecture\n",
+      "\n",
+      "3 Model Architecture\n",
+      "\n",
       "Most competitive neural sequence transduction models have an encoder-decoder structure [5, 2, 35].\n",
       "Here, the encoder maps an input sequence of symbol representations (x1, ..., xn) to a sequence\n",
       "of continuous representations z = (z1, ..., zn). Given z, the decoder then generates an output\n",
       "sequence (y1, ..., ym) of symbols one element at a time. At each step the model is auto-regressive\n",
       "[10], consuming the previously generated symbols as additional input when generating the next.\n",
-      "                                                2\n"
+      "\n",
+      "                                                 2\n"
      ]
     }
    ],
@@ -131,39 +151,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "arXiv:1706.03762v7  [cs.CL]  2 Aug 2023\n",
       "\n",
       "Provided proper attribution is provided, Google hereby grants permission to reproduce the tables and figures in this paper solely for use in journalistic or scholarly works.\n",
       "\n",
       "# Attention Is All You Need\n",
       "\n",
-      "Ashish Vaswani∗        Noam Shazeer∗           Niki Parmar∗        Jakob Uszkoreit∗\n",
+      "**Ashish Vaswani***  \n",
+      "Google Brain  \n",
+      "avaswani@google.com  \n",
       "\n",
-      "Google Brain        Google Brain         Google Research       Google Research\n",
+      "**Noam Shazeer***  \n",
+      "Google Brain  \n",
+      "noam@google.com  \n",
       "\n",
-      "avaswani@google.com   noam@google.com        nikip@google.com      usz@google.com\n",
+      "**Niki Parmar***  \n",
+      "Google Research  \n",
+      "nikip@google.com  \n",
       "\n",
-      "Llion Jones∗                Aidan N. Gomez∗ †               Łukasz Kaiser∗\n",
+      "**Jakob Uszkoreit***  \n",
+      "Google Research  \n",
+      "usz@google.com  \n",
       "\n",
-      "Google Research         University of Toronto                Google Brain\n",
+      "**Llion Jones***  \n",
+      "Google Research  \n",
+      "llion@google.com  \n",
       "\n",
-      "llion@google.com      aidan@cs.toronto.edu           lukaszkaiser@google.com\n",
+      "**Aidan N. Gomez* †**  \n",
+      "University of Toronto  \n",
+      "aidan@cs.toronto.edu  \n",
       "\n",
-      "Illia Polosukhin∗ ‡\n",
+      "**Łukasz Kaiser***  \n",
+      "Google Brain  \n",
+      "lukaszkaiser@google.com  \n",
       "\n",
-      "illia.polosukhin@gmail.com\n",
+      "**Illia Polosukhin* ‡**  \n",
+      "illia.polosukhin@gmail.com  \n",
       "\n",
-      "# Abstract\n",
+      "## Abstract\n",
       "\n",
       "The dominant sequence transduction models are based on complex recurrent or convolutional neural networks that include an encoder and a decoder. The best performing models also connect the encoder and decoder through an attention mechanism. We propose a new simple network architecture, the Transformer, based solely on attention mechanisms, dispensing with recurrence and convolutions entirely. Experiments on two machine translation tasks show these models to be superior in quality while being more parallelizable and requiring significantly less time to train. Our model achieves 28.4 BLEU on the WMT 2014 English-to-German translation task, improving over the existing best results, including ensembles, by over 2 BLEU. On the WMT 2014 English-to-French translation task, our model establishes a new single-model state-of-the-art BLEU score of 41.8 after training for 3.5 days on eight GPUs, a small fraction of the training costs of the best models from the literature. We show that the Transformer generalizes well to other tasks by applying it successfully to English constituency parsing both with large and limited training data.\n",
       "\n",
-      "∗Equal contribution. Listing order is random. Jakob proposed replacing RNNs with self-attention and started the effort to evaluate this idea. Ashish, with Illia, designed and implemented the first Transformer models and has been crucially involved in every aspect of this work. Noam proposed scaled dot-product attention, multi-head attention and the parameter-free position representation and became the other person involved in nearly every detail. Niki designed, implemented, tuned and evaluated countless model variants in our original codebase and tensor2tensor. Llion also experimented with novel model variants, was responsible for our initial codebase, and efficient inference and visualizations. Lukasz and Aidan spent countless long days designing various parts of and implementing tensor2tensor, replacing our earlier codebase, greatly improving results and massively accelerating our research.\n",
+      "----\n",
       "\n",
-      "†Work performed while at Google Brain.\n",
+      "*Equal contribution. Listing order is random. Jakob proposed replacing RNNs with self-attention and started the effort to evaluate this idea. Ashish, with Illia, designed and implemented the first Transformer models and has been crucially involved in every aspect of this work. Noam proposed scaled dot-product attention, multi-head attention and the parameter-free position representation and became the other person involved in nearly every detail. Niki designed, implemented, tuned and evaluated countless model variants in our original codebase and tensor2tensor. Llion also experimented with novel model variants, was responsible for our initial codebase, and efficient inference and visualizations. Lukasz and Aidan spent countless long days designing various parts of and implementing tensor2tensor, replacing our earlier codebase, greatly improving results and massively accelerating our research.  \n",
+      "† Work performed while at Google Brain.  \n",
+      "‡ Work performed while at Google Research.\n",
       "\n",
-      "‡Work performed while at Google Research.\n",
-      "\n",
-      "31st Conference on Neural Information Processing Systems (NIPS 2017), Long Beach, CA, USA.\n"
+      "31st Conference on Neural Information Processing Systems (NIPS 2017), Long Beach, CA, USA.\n",
+      "\n"
      ]
     }
    ],
@@ -175,7 +210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
