--- a/examples/parse/demo_excel.ipynb
+++ b/examples/parse/demo_excel.ipynb
@@ -10,8 +10,12 @@
     "\n",
     "This notebook shows you using LlamaParse with Excel Spreadsheet.\n",
     "\n",
-    "We will use NVIDIA revenue [data](https://investor.nvidia.com/financial-info/quarterly-results/default.aspx) from last 5 quarters\n",
-    "\n"
+    "We will use NVIDIA revenue [data](https://investor.nvidia.com/financial-info/quarterly-results/default.aspx) from last 5 quarters/\n",
+    "\n",
+    "Status:\n",
+    "| Last Executed | Version | State      |\n",
+    "|---------------|---------|------------|\n",
+    "| Aug-18-2025   | 0.6.61  | Maintained |\n"
    ]
   },
   {
@@ -20,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install llama-index\n",
+    "%pip install \"llama-index>=0.13.2<0.14.0\"\n",
     "%pip install llama-cloud-services"
    ]
   },
@@ -37,13 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import nest_asyncio\n",
-    "\n",
-    "nest_asyncio.apply()\n",
-    "\n",
     "from llama_cloud_services import LlamaParse\n",
     "\n",
-    "api_key = \"llx-\"  # get from cloud.llamaindex.ai"
+    "api_key = \"llx-jwAQZL8T38onyL9hKBOXyRtnuCU0Fk3z7tmDhIT3L0GEfohJ\"  # get from cloud.llamaindex.ai"
    ]
   },
   {
@@ -62,37 +62,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started parsing the file under job_id 94b4d648-1e3f-43d9-9065-20893f2d5822\n"
+      "Started parsing the file under job_id 9ea6e117-ada1-4e22-b067-10a128b2c16e\n"
      ]
     }
    ],
    "source": [
     "parser = LlamaParse(\n",
     "    api_key=api_key,  # can also be set in your env as LLAMA_CLOUD_API_KEY\n",
-    "    result_type=\"markdown\",\n",
+    "    parse_mode=\"parse_page_with_agent\",\n",
+    "    model=\"openai-gpt-4-1-mini\",\n",
+    "    high_res_ocr=True,\n",
+    "    adaptive_long_table=True,\n",
+    "    outlined_table_extraction=True,\n",
+    "    output_tables_as_HTML=True,\n",
     ")\n",
     "\n",
-    "documents = parser.load_data(\"../data/nvidia_quarterly_revenue_trend_by_market.xlsx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Document(id_='93202576-4284-4473-80b3-8c9b31c93088', embedding=None, metadata={}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={}, text='|                          |NVIDIA QUARTERLY REVENUE TREND REVENUE BY MARKET|       |       |       |       |       |       |       |\\n|--------------------------|------------------------------------------------|-------|-------|-------|-------|-------|-------|-------|\\n|                          |                                                |       |       |       |       |       |       |       |\\n|($ in millions)           |Q1 FY25                                         |Q4 FY24|Q3 FY24|Q2 FY24|Q1 FY24|Q4 FY23|Q3 FY23|Q2 FY23|\\n|Data Center               |$22,563                                         |$18,404|$14,514|$10,323|$4,284 |$3,616 |$3,833 |$3,806 |\\n|Gaming                    |2647                                            |2865   |2856   |2486   |2240   |1831   |1574   |2042   |\\n|Professional Visualization|427                                             |463    |416    |379    |295    |226    |200    |496    |\\n|Auto                      |329                                             |281    |261    |253    |296    |294    |251    |220    |\\n|OEM & Other               |78                                              |90     |73     |66     |77     |84     |73     |140    |\\n|TOTAL                     |$26,044                                         |$22,103|$18,120|$13,507|$7,192 |$6,051 |$5,931 |$6,704 |\\n|                          |                                                |       |       |       |       |       |       |       |\\n|($ in millions)           |Q1 FY24                                         |Q4 FY23|Q3 FY23|Q2 FY23|Q1 FY23|Q4 FY22|Q3 FY22|Q2 FY22|\\n|Data Center               |$4,284                                          |$3,616 |$3,833 |$3,806 |$3,750 |$3,263 |$2,936 |$2,366 |\\n|Gaming                    |$2,240                                          |$1,831 |$1,574 |$2,042 |$3,620 |$3,420 |$3,221 |$3,061 |\\n|Professional Visualization|$295                                            |$226   |$200   |$496   |$622   |$643   |$577   |$519   |\\n|Auto                      |$296                                            |$294   |$251   |$220   |$138   |$125   |$135   |$152   |\\n|OEM & Other               |$77                                             |$84    |$73    |$140   |$158   |$192   |$234   |$409   |\\n|TOTAL                     |$7,192                                          |$6,051 |$5,931 |$6,704 |$8,288 |$7,643 |$7,103 |$6,507 |\\n|                          |                                                |       |       |       |       |       |       |       |\\n|($ in millions)           |Q4 FY24                                         |Q3 FY24|Q2 FY24|Q1 FY24|Q4 FY23|Q3 FY23|Q2 FY23|Q1 FY23|\\n|Data Center               |$18,404                                         |$14,514|$10,323|$4,284 |$3,616 |$3,833 |$3,806 |$3,750 |\\n|Gaming                    |$2,865                                          |$2,856 |$2,486 |$2,240 |$1,831 |$1,574 |$2,042 |$3,620 |\\n|Professional Visualization|$463                                            |$416   |$379   |$295   |$226   |$200   |$496   |$622   |\\n|Auto                      |$281                                            |$261   |$253   |$296   |$294   |$251   |$220   |$138   |\\n|OEM & Other               |$90                                             |$73    |$66    |$77    |$84    |$73    |$140   |$158   |\\n|TOTAL                     |$22,103                                         |$18,120|$13,507|$7,192 |$6,051 |$5,931 |$6,704 |$8,288 |\\n|                          |                                                |       |       |       |       |       |       |       |\\n|($ in millions)           |Q3 FY24                                         |Q2 FY24|Q1 FY24|Q4 FY23|Q3 FY23|Q2 FY23|Q1 FY23|Q4 FY22|\\n|Data Center               |$14,514                                         |$10,323|$4,284 |$3,616 |$3,833 |$3,806 |$3,750 |$3,263 |\\n|Gaming                    |$2,856                                          |$2,486 |$2,240 |$1,831 |$1,574 |$2,042 |$3,620 |$3,420 |\\n|Professional Visualization|$416                                            |$379   |$295   |$226   |$200   |$496   |$622   |$643   |\\n|Auto                      |$261                                            |$253   |$296   |$294   |$251   |$220   |$138   |$125   |\\n|OEM & Other               |$73                                             |$66    |$77    |$84    |$73    |$140   |$158   |$192   |\\n|TOTAL                     |$18,120                                         |$13,507|$7,192 |$6,051 |$5,931 |$6,704 |$8,288 |$7,643 |\\n|                          |                                                |       |       |       |       |       |       |       |\\n|($ in millions)           |Q2 FY24                                         |Q1 FY24|Q4 FY23|Q3 FY23|Q2 FY23|Q1 FY23|Q4 FY22|Q3 FY22|\\n|Data Center               |$10,323                                         |$4,284 |$3,616 |$3,833 |$3,806 |$3,750 |$3,263 |$2,936 |\\n|Gaming                    |$2,486                                          |$2,240 |$1,831 |$1,574 |$2,042 |$3,620 |$3,420 |$3,221 |\\n|Professional Visualization|$379                                            |$295   |$226   |$200   |$496   |$622   |$643   |$577   |\\n|Auto                      |$253                                            |$296   |$294   |$251   |$220   |$138   |$125   |$135   |\\n|OEM & Other               |$66                                             |$77    |$84    |$73    |$140   |$158   |$192   |$234   |\\n|TOTAL                     |$13,507                                         |$7,192 |$6,051 |$5,931 |$6,704 |$8,288 |$7,643 |$7,103 |\\n', start_char_idx=None, end_char_idx=None, text_template='{metadata_str}\\n\\n{content}', metadata_template='{key}: {value}', metadata_seperator='\\n')]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "documents"
+    "result = await parser.aparse(\"./data/nvidia_quarterly_revenue_trend_by_market.xlsx\")\n",
+    "documents = result.get_markdown_documents(split_by_page=True)"
    ]
   },
   {
@@ -110,12 +96,12 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"sk-\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
     "\n",
     "from llama_index.llms.openai import OpenAI\n",
     "from llama_index.core import Settings\n",
     "\n",
-    "llm = OpenAI(model=\"gpt-4\")\n",
+    "llm = OpenAI(model=\"gpt-5-mini\")\n",
     "Settings.llm = llm"
    ]
   },
@@ -155,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The total revenue in Q1 FY25 is $26,044 million.\n"
+      "Total revenue in Q1 FY25: $26,044 million.\n"
      ]
     }
    ],
@@ -173,7 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The revenue for the Data Center sector increased from $3,750 million in Q1 FY23 to $22,563 million in Q1 FY25.\n"
+      "Data Center revenue rose from $3,750M in Q1 FY23 to $22,563M in Q1 FY25 — an absolute increase of $18,813M, which is a 501.7% increase (≈6.02×).\n"
      ]
     }
    ],
@@ -193,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The revenue of gaming in Q4 2024 was $2,865 million.\n"
+      "$2,865 million\n"
      ]
     }
    ],
@@ -211,7 +197,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The total revenue in Q4 FY24 was $22,103 million.\n"
+      "$22,103 million.\n"
      ]
     }
    ],
@@ -229,7 +215,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The revenue from Professional Visualization in the last four quarters of 2024 were as follows: Q1 FY24 - $295 million, Q2 FY24 - $379 million, Q3 FY24 - $416 million, and Q4 FY24 - $463 million.\n"
+      "Professional Visualization revenue (last four quarters of 2024, $ in millions):\n",
+      "- Q4 FY24: $463M\n",
+      "- Q3 FY24: $416M\n",
+      "- Q2 FY24: $379M\n",
+      "- Q1 FY24: $295M\n",
+      "\n",
+      "Total (those four quarters): $1,553M.\n"
      ]
     }
    ],
@@ -249,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The total revenue in Q3 FY24 was $18,120 million.\n"
+      "$18,120 million\n"
      ]
     }
    ],
@@ -267,7 +259,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The revenue of the data center grew from $14,514 million in Q3 FY24 to $18,404 million in Q4 FY24.\n"
+      "Data Center revenue rose from $14,514M (Q3 FY24) to $18,404M (Q4 FY24) — an increase of $3,890M, or about 26.8%.\n"
      ]
     }
    ],
@@ -284,7 +276,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
