--- a/examples/parse/demo_json.ipynb
+++ b/examples/parse/demo_json.ipynb
@@ -11,7 +11,12 @@
     "\n",
     "This notebook shows you how to use LlamaParse JSON mode with LlamaIndex to build a simple multimodal RAG pipeline.\n",
     "\n",
-    "Using JSON mode gives you back a list of json dictionaries, which contains both text and images. You can then download these images and use a multimodal model to extract information and index them."
+    "Using JSON mode gives you back a list of json dictionaries, which contains both text and images. You can then download these images and use a multimodal model to extract information and index them.\n",
+    "\n",
+    "Status:\n",
+    "| Last Executed | Version | State      |\n",
+    "|---------------|---------|------------|\n",
+    "| Aug-19-2025   | 0.6.61  | Maintained |"
    ]
   },
   {
@@ -32,9 +37,9 @@
    "outputs": [],
    "source": [
     "%pip install llama-index\n",
-    "%pip install llama-index-core\n",
-    "%pip install llama-index-llms-anthropic\n",
-    "%pip install llama-index-embeddings-huggingface\n",
+    "%pip install \"llama-index-core>=0.13.2<0.14.0\"\n",
+    "%pip install \"llama-index-llms-anthropic>=0.8.4<0.9.0\"\n",
+    "%pip install \"llama-index-embeddings-huggingface>=0.6.0<0.7.0\"\n",
     "%pip install llama-cloud-services"
    ]
   },
@@ -48,10 +53,10 @@
     "import os\n",
     "\n",
     "# API access to llama-cloud\n",
-    "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-\"\n",
+    "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-...\"\n",
     "\n",
-    "# Using Anthropic API for embeddings/LLMs\n",
-    "os.environ[\"ANTHROPIC_API_KEY\"] = \"sk-\""
+    "# Using Anthropic API for LLMs\n",
+    "os.environ[\"ANTHROPIC_API_KEY\"] = \"sk-...\""
    ]
   },
   {
@@ -63,7 +68,7 @@
    "source": [
     "from llama_index.llms.anthropic import Anthropic\n",
     "\n",
-    "llm = Anthropic(model=\"claude-3-5-sonnet-20241022\")"
+    "llm = Anthropic(model=\"claude-4-sonnet-20250514\")"
    ]
   },
   {
@@ -71,12 +76,21 @@
    "execution_count": null,
    "id": "700f48e8-8b52-41f3-90f9-144d5fdd5c52",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/loganmarkewich/llama_parse/py/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from llama_index.core import Settings\n",
     "\n",
     "Settings.llm = llm\n",
-    "Settings.embed_model = \"local:BAAI/bge-small-en-v1.5\""
+    "Settings.embed_model = \"local:Qwen/Qwen3-Embedding-0.6B\""
    ]
   },
   {
@@ -119,14 +133,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started parsing the file under job_id cf5a4f51-1af8-47f7-9b3d-80a905d06b89\n"
+      "Started parsing the file under job_id 33d93a46-1b43-4619-b4ff-0c272cbca4b3\n",
+      ".."
      ]
     }
    ],
    "source": [
     "from llama_cloud_services import LlamaParse\n",
     "\n",
-    "parser = LlamaParse(take_screenshot=True)\n",
+    "parser = LlamaParse(\n",
+    "    parse_mode=\"parse_page_with_agent\",\n",
+    "    model=\"openai-gpt-4-1-mini\",\n",
+    "    high_res_ocr=True,\n",
+    "    adaptive_long_table=True,\n",
+    "    outlined_table_extraction=True,\n",
+    "    output_tables_as_HTML=True,\n",
+    ")\n",
+    "\n",
     "result = await parser.aparse(\"./uber_10q_march_2022.pdf\")"
    ]
   },
@@ -140,7 +163,7 @@
     "text_nodes = await result.aget_text_nodes(split_by_page=True)\n",
     "image_nodes = await result.aget_image_nodes(\n",
     "    include_screenshot_images=True,\n",
-    "    include_object_images=True,\n",
+    "    include_object_images=False,\n",
     "    image_download_dir=\"./uber_10q_images\",\n",
     ")"
    ]
@@ -160,24 +183,14 @@
    "execution_count": null,
    "id": "36012145-5521-4ddb-a53e-df9ebd1ca8dd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mkdir: llama2_images: File exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!mkdir -p llama2_images\n",
-    "\n",
     "from llama_index.core.llms import ChatMessage, ImageBlock, TextBlock\n",
     "from llama_index.core.schema import ImageNode, TextNode\n",
     "from llama_index.llms.anthropic import Anthropic\n",
     "\n",
     "\n",
-    "def get_image_text_nodes(image_nodes: list[ImageNode]):\n",
+    "async def get_image_text_nodes(image_nodes: list[ImageNode]):\n",
     "    \"\"\"Extract out text from images using a multimodal model.\"\"\"\n",
     "    llm = Anthropic(model=\"claude-3-5-haiku-20241022\", max_tokens=300)\n",
     "    img_text_nodes = []\n",
@@ -190,7 +203,7 @@
     "                ImageBlock(path=image_path),\n",
     "            ],\n",
     "        )\n",
-    "        response = llm.chat([message])\n",
+    "        response = await llm.achat([message])\n",
     "        text_node = TextNode(\n",
     "            text=str(response.message.content), metadata={\"path\": image_path}\n",
     "        )\n",
@@ -206,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_text_nodes = get_image_text_nodes(image_nodes)"
+    "image_text_nodes = await get_image_text_nodes(image_nodes)"
    ]
   },
   {
@@ -218,7 +231,7 @@
     {
      "data": {
       "text/plain": [
-       "'The image shows a bar graph titled \"Monthly Active Platform Consumers (in millions)\". The graph displays data from Q2 2020 to Q1 2022 over 8 quarters. The number of monthly active platform consumers starts at 55 million in Q2 2020 and steadily increases each quarter, reaching 115 million by Q1 2022. The graph illustrates consistent quarter-over-quarter growth in this metric over the nearly 2 year time period shown.'"
+       "'Alt text: United States Securities and Exchange Commission Form 10-Q for Uber Technologies, Inc., dated for the quarterly period ended March 31, 2022. The document shows company details including incorporation state (Delaware), address (1515 3rd Street, San Francisco), and indicates Uber is a large accelerated filer listed on the New York Stock Exchange with the trading symbol UBER.'"
       ]
      },
      "execution_count": null,
@@ -272,9 +285,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The bar graph titled \"Monthly Active Platform Consumers (in millions)\" shows the number of monthly active consumers on Uber's platform over a period of 8 quarters from Q2 2020 to Q1 2022. \n",
-      "\n",
-      "The graph indicates steady quarter-over-quarter growth in this metric, starting at 55 million monthly active platform consumers in Q2 2020 and increasing each quarter to reach 115 million by Q1 2022. This represents consistent growth in Uber's user base on their platform over the nearly 2 year period shown in the graph.\n"
+      "The bar graph titled 'Monthly Active Platform Consumers' shows the growth in platform users measured in millions from Q2 2020 to Q1 2022. The graph demonstrates a steady increase in the number of consumers using the platform, starting at 55 million users in Q2 2020 and rising to 115 million users in Q1 2022. The visualization displays notable growth between quarters, with the vertical axis representing the number of consumers in millions and the horizontal axis showing the quarterly progression over this two-year period.\n"
      ]
     }
    ],
@@ -296,25 +307,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the context provided, some of the main risk factors for Uber include:\n",
+      "Based on the financial documents provided, I can identify some key risk factors for Uber, though the context is limited to specific pages:\n",
       "\n",
-      "- A significant percentage of Uber's bookings come from large metropolitan areas, which could be negatively impacted by various economic, social, weather, regulatory and other conditions, including COVID-19.\n",
+      "**Legal and Regulatory Risks:**\n",
+      "- Driver classification issues pose significant business risks, as legal determinations about whether drivers are employees or independent contractors could substantially impact Uber's operations and cost structure.\n",
       "\n",
-      "- Uber may fail to successfully offer autonomous vehicle technologies on its platform or these technologies may not perform as expected. \n",
+      "**Operational Risks:**\n",
+      "- The company continues to report net losses, indicating ongoing profitability challenges across its business segments.\n",
       "\n",
-      "- Retaining and attracting high-quality personnel is important for Uber's business and continued attrition could adversely impact the company.\n",
+      "**Business Model Risks:**\n",
+      "- Uber operates across multiple segments (Mobility, Delivery, and Freight), which creates exposure to various market conditions and regulatory environments in different industries.\n",
       "\n",
-      "- Security breaches, data privacy issues, cyberattacks and unauthorized access to Uber's proprietary data and systems pose risks.\n",
+      "**Geographic Concentration Risk:**\n",
+      "- The company has operations across different geographic regions, which exposes it to varying regulatory frameworks, economic conditions, and competitive landscapes in different markets.\n",
       "\n",
-      "- Uber is subject to climate change risks, both physical and transitional, that could adversely impact its business if not managed properly. \n",
-      "\n",
-      "- Uber relies on third parties for open marketplaces to distribute its platform and software, and interference from these third parties could harm its business.\n",
-      "\n",
-      "- Uber will require additional capital to support its growth and this capital may not be available on reasonable terms.\n",
-      "\n",
-      "- Acquisitions and integrations carry risks if Uber is unable to successfully identify and integrate suitable businesses.\n",
-      "\n",
-      "- Extensive government regulations around payments, financial services, data privacy and other areas pose compliance risks and challenges for Uber's business model in certain jurisdictions.\n"
+      "However, the provided context appears to be from specific pages of financial reports that focus primarily on financial metrics and segment information. A complete assessment of Uber's risk factors would typically be found in the dedicated risk factors section of their SEC filings, which is not included in the available context.\n"
      ]
     }
    ],
@@ -327,7 +334,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
